--- a/pages/templates/on_site.html
+++ b/pages/templates/on_site.html
@@ -1,7 +1,8 @@
 {% extends 'base_generic.html' %}
 {% load chunks %}
+{% load i18n %}
 
 {% block content %}
-  <h1>On Site</h1>
+  <h1>{% trans "On Site" %}</h1>
 
 {% endblock %}
