--- a/meeting/templates/staff_fuel_reservation_list.html
+++ b/meeting/templates/staff_fuel_reservation_list.html
@@ -1,6 +1,7 @@
 {% extends "base_generic.html" %}
 {% load static %}
 {% load widget_tweaks %}
+{% load i18n %}
 
 {% block javascript%}
 <script src="{% static 'js/ajax_reservation.js' %}"></script>
@@ -8,7 +9,7 @@
 
 {% block content %}
 
-<h3>Pilots Fuel Reservations</h3>
+<h3>{% trans "Pilots Fuel Reservations" %}</h3>
 <hr>
 
   <form method="get">
@@ -76,13 +77,13 @@
 <table id="reservation_table" class="table table-hover">
   <thead class="thead-dark">
   <tr>
-    <th>ID</th>
-    <th>pilot</th>
-    <th>Imatriculation</th>
-    <th>radio id</th>
-    <th>Fuel Reservation</th>
-    <th>Fuel Served</th>
-    <th class="center">Actions</th>
+    <th>{% trans "ID" %}</th>
+    <th>{% trans "pilot" %}</th>
+    <th>{% trans "Imatriculation" %}</th>
+    <th>{% trans "radio id" %}</th>
+    <th>{% trans "Fuel Reservation" %}</th>
+    <th>{% trans "Fuel Served" %}</th>
+    <th class="center">{% trans "Actions" %}</th>
   </tr>
   </thead>
   <tbody>
@@ -103,7 +104,7 @@
               class="btn btn-warning btn-sm js-update-fuel-served"
               data-url="{% url 'ajax_fuel_served' res.id %}"
               data-contener-id="modal-update-fuel">
-        <span class="fas fa-pen"></span> Validate
+        <span class="fas fa-pen"></span> {% trans "Validate" %}
       </button>
     </td>
   </tr>
