--- a/pages/templates/contact.html
+++ b/pages/templates/contact.html
@@ -1,7 +1,8 @@
 {% extends 'base_generic.html' %}
 {% load chunks %}
+{% load i18n %}
 
 {% block content %}
-  <h1>Contact</h1>
+  <h1>{% trans "Contact" %}</h1>
 
 {% endblock %}
