--- a/pages/templates/faq.html
+++ b/pages/templates/faq.html
@@ -1,5 +1,5 @@
 {% extends 'base_generic.html' %}
-
+{% load i18n %}
 {% block style %}
 
 // FAQ
@@ -111,7 +111,7 @@
 {% endblock %}
 
 {% block content %}
-<h3>FAQ</h3>
+<h3>{% trans "FAQ" %}</h3>
 
     <div class="row">
         <div class="col-sm-2">
