--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,3 +1,4 @@
+{% load i18n %} 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
   <a class="navbar-brand" href="{% url 'index' %}">ULMBLois</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,16 +8,16 @@
     {% with url_name=request.resolver_match.url_name %}
     <ul class="navbar-nav">
       <li class="nav-item {% if url_name == 'on_site' %}active{% endif %}">
-        <a href="{% url 'on_site'%}" class="nav-link">On Site</a>
+        <a href="{% url 'on_site'%}" class="nav-link">{% trans "On Site" %}</a>
       </li>
       <li class="nav-item {% if url_name == 'pilot_informations' %}active{% endif %}">
-        <a href="{% url 'pilot_informations'%}" class="nav-link">Pilotes Informations</a>
+        <a href="{% url 'pilot_informations'%}" class="nav-link">{% trans "Pilotes Informations" %}</a>
       </li>
       <li class="nav-item {% if url_name == 'about' %}active{% endif %}">
-        <a href="{% url 'about' %}" class="nav-link">About</a>
+        <a href="{% url 'about' %}" class="nav-link">{% trans "About" %}</a>
       </li>
       <li class="nav-item {% if url_name == 'contact' %}active{% endif %}">
-        <a href="{% url 'contact'%}" class="nav-link">Contact</a>
+        <a href="{% url 'contact'%}" class="nav-link">{% trans "Contact" %}</a>
       </li>
       </ul>
       {% if user.is_authenticated %}
@@ -24,11 +25,11 @@
         <ul class="navbar-nav">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownStaffMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Management
+            {% trans "Management" %}
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownStaffMenuLink">
-            <a href="{% url 'staff_reservation_list'%}" class="dropdown-item">Pilot Reservations</a>
-            <a href="{% url 'staff_fuel_res_list'%}" class="dropdown-item">Fuel Reservations</a>
+            <a href="{% url 'staff_reservation_list'%}" class="dropdown-item">{% trans "Pilot Reservations" %}</a>
+            <a href="{% url 'staff_fuel_res_list'%}" class="dropdown-item">{% trans "Fuel Reservations" %}</a>
           </div>
         </li>
         </ul>
@@ -39,22 +40,22 @@
             <span class='fas fa-user-circle'></span> {{ user.get_username }}
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownUserMenuLink">
-            <a href="{% url 'pilot' user.pilot.pk%}" class="dropdown-item">Profile</a>
-            <a href="{% url 'pilot_reservation' %}" class="dropdown-item">My Reservations</a>
-            <a href="{% url 'pilot_ulm_list' %}" class="dropdown-item">My ULMs</a>
+            <a href="{% url 'pilot' user.pilot.pk%}" class="dropdown-item">{% trans "Profile" %}</a>
+            <a href="{% url 'pilot_reservation' %}" class="dropdown-item">{% trans "My Reservations" %}</a>
+            <a href="{% url 'pilot_ulm_list' %}" class="dropdown-item">{% trans "My ULMs" %}</a>
           </div>
         </li>
         <li class="nav-item">
-                <a href="{% url 'logout'%}?next={{request.path}}" class="nav-link"><span class="fas fa-sign-out-alt"></span> Logout</a>
+                <a href="{% url 'logout'%}?next={{request.path}}" class="nav-link"><span class="fas fa-sign-out-alt"></span> {% trans "Logout" %}</a>
         </li>
         </ul>
       {% else %}
       <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <button  data-toggle="modal" data-target="#loginModal"class="btn btn-default"><span class="fas fa-sign-in-alt"></span> Login</button>
+        <button  data-toggle="modal" data-target="#loginModal"class="btn btn-default"><span class="fas fa-sign-in-alt"></span>{% trans "Login" %}</button>
       </li>
       <li class="nav-item">
-        <a href="{% url 'signup'%}?next={{request.path}}" class="nav-link">Sign Up</a>
+        <a href="{% url 'signup'%}?next={{request.path}}" class="nav-link">{% trans "Sign Up" %}</a>
 
       </li>
       </ul>
@@ -73,25 +74,25 @@
           {% csrf_token %}
 
           <div class="modal-header">
-            <h4 class="modal-title">Login</h4>
+            <h4 class="modal-title">{% trans "Login" %}</h4>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
             <div class="form-group">
-              <label for="usernameInput">Username</label>
+              <label for="usernameInput">{% trans "Username" %}</label>
               <input class="form-control" type="text" id="usernameInput" placeholder="Username" name="username" required>
             </div>
             <div class="form-group">
-              <label for="passwordInput">Password</label>
+              <label for="passwordInput">{% trans "Password" %}</label>
               <input class="form-control" type="password" id="passwordInput" placeholder="Password" name="password" required>
             </div>
           </div>
           <div class="modal-footer">
-              <a href="{% url 'password_reset' %}">Lost password?</a>
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button type="submit" class="btn btn-primary">Login</button>
+              <a href="{% url 'password_reset' %}">{% trans "Lost password?" %}</a>
+              <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Close" %}</button>
+              <button type="submit" class="btn btn-primary">{% trans "Login" %}</button>
           </div>
       </form>
       </div>
