--- a/templates/includes/pagination.html
+++ b/templates/includes/pagination.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 {% if is_paginated %}
 <nav aria-label="Page navigation">
   <ul class="pagination justify-content-center">
@@ -5,14 +7,14 @@
     <li class="page-item">
       <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
-        <span class="sr-only">Previous</span>
+        <span class="sr-only">{% trans "Previous" %}</span>
       </a>
     </li>
     {% else %}
     <li class="page-item disabled">
       <a class="page-link" href="#" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
-        <span class="sr-only">Previous</span>
+        <span class="sr-only">{% trans "Previous" %}</span>
       </a>
     </li>
     {% endif %}
@@ -31,14 +33,14 @@
       <li class="page-item">
         <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
           <span aria-hidden="true">&raquo;</span>
-          <span class="sr-only">Next</span>
+          <span class="sr-only">{% trans "Next" %}</span>
         </a>
       </li>
     {% else %}
       <li class="page-item disabled">
         <a class="page-link" href="#" aria-label="Next">
           <span aria-hidden="true">&raquo;</span>
-          <span class="sr-only">Next</span>
+          <span class="sr-only">{% trans "Next" %}</span>
         </a>
       </li>
     {% endif %}
