generate .po files fr and en, make minor correction to reduce the number of entries in .po files

--- a/meeting/templates/staff_fuel_reservation_list.html
+++ b/meeting/templates/staff_fuel_reservation_list.html
@@ -78,9 +78,9 @@
   <thead class="thead-dark">
   <tr>
     <th>{% trans "ID" %}</th>
-    <th>{% trans "pilot" %}</th>
+    <th>{% trans "Pilot" %}</th>
     <th>{% trans "Imatriculation" %}</th>
-    <th>{% trans "radio id" %}</th>
+    <th>{% trans "Radio Id" %}</th>
     <th>{% trans "Fuel Reservation" %}</th>
     <th>{% trans "Fuel Served" %}</th>
     <th class="center">{% trans "Actions" %}</th>
