--- a/meeting/templates/staff_reservation_list.html
+++ b/meeting/templates/staff_reservation_list.html
@@ -78,9 +78,9 @@
     <tr>
     <th>{% trans "ID" %}</th>
     <th>{% trans "Time Slot" %}</th>
-    <th>{% trans "pilot" %}</th>
+    <th>{% trans "Pilot" %}</th>
     <th>{% trans "Imatriculation" %}</th>
-    <th>{% trans "radio id" %}</th>
+    <th>{% trans "Radio Id" %}</th>
     <th>{% trans "Fuel" %}</th>
     <th>{% trans "Flight plan" %}</th>
     <th>{% trans "Esthetic Cup" %}</th>
