--- a/pages/templates/about.html
+++ b/pages/templates/about.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block content %}
-  <h1>{% trans "ABOUT" %}</h1>
+  <h1>{% trans "About" %}</h1>
 
   {% get_chunk 'about_page' as about %}
   {% evaluate about.content %}
