--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -126,17 +126,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm">
-                    <h5>{% trans "Get started" %}</h5>
+                    <h5>{% trans "Get Started" %}</h5>
                     <ul>
                         <li><a href="{% url 'index' %}">{% trans "Home" %}</a></li>
-                        <li><a href="{% url 'signup'%}">{% trans "Sign up" %}</a></li>
+                        <li><a href="{% url 'signup'%}">{% trans "Sign Up" %}</a></li>
                     </ul>
                 </div>
                 <div class="col-sm">
-                    <h5>{% trans "About us" %}</h5>
+                    <h5>{% trans "About Us" %}</h5>
                     <ul>
                         <li><a href="{% url 'about'%}">{% trans "About" %}</a></li>
-                        <li><a href="{% url 'contact'%}">{% trans "Contact us" %}</a></li>
+                        <li><a href="{% url 'contact'%}">{% trans "Contact Us" %}</a></li>
                     </ul>
                 </div>
                 <div class="col-sm">
