--- a/templates/base/base_generic.html
+++ b/templates/base/base_generic.html
@@ -7,11 +7,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
 <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-<link href="{% static 'css/w3.css' %}" rel="stylesheet">
-<link href="{% static 'css/w3-theme-black.css' %}" rel="stylesheet">
 
 <style>
-html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 {% block style %}
 {% endblock %}
 </style>
@@ -21,7 +18,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 {% include 'navbar.html'%}
 
 
-<div class="content">
+<div class="container-fluid d-flex h-100 flex-column">
 
   {% block content %}
   {% endblock %}
