--- a/templates/base/base_form.html
+++ b/templates/base/base_form.html
@@ -45,6 +45,9 @@ input[type=submit] {
 
 {% block content%}
 
+{% block beforeform %}
+{% endblock %}
+
 {% if messages %}
     {% for message in messages %}
       {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
