--- a/templates/includes/form.html
+++ b/templates/includes/form.html
@@ -1,7 +1,6 @@
 {% load widget_tweaks %}
 
-<div class="content">
-
+<div class="container">
 {% for hidden_field in form.hidden_fields %}
   {{ hidden_field }}
 {% endfor %}
