--- a/templates/base/base_generic.html
+++ b/templates/base/base_generic.html
@@ -18,7 +18,7 @@
 {% include 'navbar.html'%}
 
 
-<div class="container-fluid d-flex h-100 flex-column">
+<div class="container-fluid d-flex h-100 flex-column" style="margin-bottom:200px">
 
   {% block content %}
   {% endblock %}
