--- a/meeting/templates/staff_reservation_validation.html
+++ b/meeting/templates/staff_reservation_validation.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<nav aria-label="breadcrumb">
+<nav aria-label="breadcrumb" class="mt-3">
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="{% url 'staff_reservation_list'%}">Arrivals</a></li>
     <li class="breadcrumb-item active"><a href="#">Validate</a></li>
@@ -13,8 +13,19 @@
 
 <h3>{% trans 'Reservation' %}: {{reservation.reservation_number}}</h3>
 
+{% if reservation.arrival is not None %}
+<div class="alert alert-success" role="alert">
+  {% trans 'This reservation as been validate on:'%} {{reservation.arrival}}
+</div>
+{% endif%}
+
+{%  if reservation.is_missing_informations %}
+<div class="alert alert-danger" role="alert">
+  {% trans 'Some informations are missing in this reservation'%}
+</div>
+{% endif%}
+
 <div class="card-deck">
-  <!-- <div class="col-sm"> -->
 
     <div class="card">
       <h5 class="card-header">
@@ -50,10 +61,6 @@
         {% endwith%}
       </div>
     </div>
-
-  <!-- </div> -->
-
-  <!-- <div class="col-sm"> -->
 
     <div class="card">
       <h5 class="card-header">
@@ -92,12 +99,6 @@
       </div>
     </div>
 
-  <!-- </div> -->
-
-<!-- </div> -->
-
-<!-- <div class="row"> -->
-  <!-- <div class="col-sm"> -->
     <div class="card">
       <h5 class="card-header">
         {% trans 'ULM'%}
@@ -136,7 +137,14 @@
         {% endwith%}
       </div>
   </div>
-  <!-- </div> -->
+
+</div>
+
+<div class="row mt-3">
+<div class="col">
+  <a href="{% url 'staff_reservation_validate' reservation.pk %}" class="btn btn-success">Validate</a>
+  <button type="button" name="print_btn" class="btn btn-warning">Print</button>
+</div>
 </div>
 
 {% endblock %}
