--- a/templates/includes/logged_sidebar.html
+++ b/templates/includes/logged_sidebar.html
@@ -1,11 +1,12 @@
+{% load i18n %}
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
   <!-- Sidebar - Brand -->
-  <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+  <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'index' %}">
     <div class="sidebar-brand-icon rotate-n-15">
       <i class="fas fa-laugh-wink"></i>
     </div>
-    <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+    <div class="sidebar-brand-text mx-3">ULMBLois</div>
   </a>
 
   <!-- Divider -->
@@ -13,91 +14,69 @@
 
   <!-- Nav Item - Dashboard -->
   <li class="nav-item">
-    <a class="nav-link" href="index.html">
-      <i class="fas fa-fw fa-tachometer-alt"></i>
-      <span>Dashboard</span></a>
+    <a class="nav-link" href="{% url 'index' %}">
+      <i class="fas fa-fw fa-home"></i>
+      <span>{% trans "Home" %}</span></a>
   </li>
 
-  <!-- Divider -->
   <hr class="sidebar-divider">
-
-  <!-- Heading -->
-  <div class="sidebar-heading">
-    Interface
-  </div>
-
-  <!-- Nav Item - Pages Collapse Menu -->
-  <li class="nav-item">
-    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-      <i class="fas fa-fw fa-cog"></i>
-      <span>Components</span>
-    </a>
-    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-      <div class="bg-white py-2 collapse-inner rounded">
-        <h6 class="collapse-header">Custom Components:</h6>
-        <a class="collapse-item" href="buttons.html">Buttons</a>
-        <a class="collapse-item" href="cards.html">Cards</a>
-      </div>
-    </div>
-  </li>
-
-  <!-- Nav Item - Utilities Collapse Menu -->
-  <li class="nav-item">
-    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
-      <i class="fas fa-fw fa-wrench"></i>
-      <span>Utilities</span>
-    </a>
-    <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
-      <div class="bg-white py-2 collapse-inner rounded">
-        <h6 class="collapse-header">Custom Utilities:</h6>
-        <a class="collapse-item" href="utilities-color.html">Colors</a>
-        <a class="collapse-item" href="utilities-border.html">Borders</a>
-        <a class="collapse-item" href="utilities-animation.html">Animations</a>
-        <a class="collapse-item" href="utilities-other.html">Other</a>
-      </div>
-    </div>
-  </li>
-
-  <!-- Divider -->
-  <hr class="sidebar-divider">
-
-  <!-- Heading -->
-  <div class="sidebar-heading">
-    Addons
-  </div>
-
-  <!-- Nav Item - Pages Collapse Menu -->
+  {% if user.is_staff %}
   <li class="nav-item active">
-    <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
+    <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseManagement" aria-expanded="true" aria-controls="collapseManagement">
       <i class="fas fa-fw fa-folder"></i>
-      <span>Pages</span>
+      <span>{% trans "Management" %}</span>
     </a>
-    <div id="collapsePages" class="collapse show" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+    <div id="collapseManagement" class="collapse show" aria-labelledby="headingPages" data-parent="#accordionSidebar">
       <div class="bg-white py-2 collapse-inner rounded">
-        <h6 class="collapse-header">Login Screens:</h6>
-        <a class="collapse-item" href="login.html">Login</a>
-        <a class="collapse-item" href="register.html">Register</a>
-        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
+        <h6 class="collapse-header">{% trans "General:" %}</h6>
+
         <div class="collapse-divider"></div>
-        <h6 class="collapse-header">Other Pages:</h6>
-        <a class="collapse-item" href="404.html">404 Page</a>
-        <a class="collapse-item active" href="blank.html">Blank Page</a>
+        <h6 class="collapse-header">{% trans "Arrivals & Fuel:" %}</h6>
+        <a class="collapse-item" href="{% url 'staff_reservation_list'%}">
+          <i class="fas fa-fw fa-plane-arrival"></i>
+          <span>{% trans "Pilot Reservations" %}</span>
+        </a>
+        <a class="collapse-item active" href="{% url 'staff_fuel_res_list'%}">
+          <i class="fas fa-fw fa-gas-pump"></i>
+          <span>{% trans "Fuel Reservations" %}</span>
+        </a>
       </div>
     </div>
   </li>
+  {% endif %}
 
-  <!-- Nav Item - Charts -->
+  <!-- Divider -->
+  <hr class="sidebar-divider">
+
+  <!-- Heading -->
+  <div class="sidebar-heading">
+    {% trans "Your Reservation"%}
+  </div>
+
   <li class="nav-item">
-    <a class="nav-link" href="charts.html">
-      <i class="fas fa-fw fa-chart-area"></i>
-      <span>Charts</span></a>
+    <a class="nav-link" href="{% url 'pilot_reservation' %}">
+      <i class="fas fa-fw fa-th-list"></i>
+      <span>{% trans "My Reservations" %}</span></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'pilot_ulm_list' %}">
+      <i class="fas fa-fw fa-plane"></i>
+      <span>{% trans "My ULMs" %}</span></a>
   </li>
 
-  <!-- Nav Item - Tables -->
+  <!-- Divider -->
+  <hr class="sidebar-divider">
+
+  <!-- Heading -->
+  <div class="sidebar-heading">
+    {% trans "Other" %}
+  </div>
+
+  <!-- Nav Item - FAQ -->
   <li class="nav-item">
-    <a class="nav-link" href="tables.html">
-      <i class="fas fa-fw fa-table"></i>
-      <span>Tables</span></a>
+    <a class="nav-link" href="{% url 'faq'%}">
+      <i class="fas fa-fw fa-question-circle"></i>
+      <span>{% trans "FAQ"%}</span></a>
   </li>
 
   <!-- Divider -->
