--- a/meeting/templates/pilot_profile.html
+++ b/meeting/templates/pilot_profile.html
@@ -1,11 +1,12 @@
-{% extends "base_generic.html" %}
+{% extends "base_logged.html" %}
 {% load i18n %}
 
-{% block content %}
-<div class="jumbotron">
-    <h2>{% trans "Profile" %}</h2>
-</div>
+{% block page_title%}
+  {% trans "Profile" %}
+{% endblock %}
 
+
+{% block content %}
 
 <div class="card mx-4">
   <div class="card-body">
