--- a/templates/base/base_logged.html
+++ b/templates/base/base_logged.html
@@ -98,6 +98,9 @@
   <!-- Custom scripts for all pages-->
   <script src="{% static 'js/sb-admin-2.min.js'%}"></script>
 
+  {% block javascript%}
+  {% endblock %}
+
 </body>
 
 </html>
