--- a/templates/includes/logged_sidebar.html
+++ b/templates/includes/logged_sidebar.html
@@ -72,7 +72,30 @@
     {% trans "Other" %}
   </div>
 
-  <!-- Nav Item - FAQ -->
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'on_site'%}">
+      <i class="fas fa-fw fa-map-marker-alt"></i>
+      <span>{% trans "On Site" %}</span></a>
+  </li>
+
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'pilot_informations'%}">
+      <i class="fas fa-fw fa-info"></i>
+      <span>{% trans "Pilotes Informations" %}</span></a>
+  </li>
+
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'about'%}">
+      <i class="fas fa-fw fa-info-circle"></i>
+      <span>{% trans "About" %}</span></a>
+  </li>
+
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'contact'%}">
+      <i class="fas fa-fw fa-comment"></i>
+      <span>{% trans "Contact" %}</span></a>
+  </li>
+
   <li class="nav-item">
     <a class="nav-link" href="{% url 'faq'%}">
       <i class="fas fa-fw fa-question-circle"></i>
